[tool.poetry]
name = "lark-shell"
version = "0.1.1"
description = "A terminal Lark IDE"
authors = ["Bryan Hu <bryan.hu.2020@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
# repository = "https://github.com/ThatXliner/lark_shell/"  # Replaced with "Source Code"
homepage = "https://github.com/ThatXliner/lark_shell/"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",  # Optional support
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Environment :: Console",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["lark", "lark-parser", "urwid", "tool", "terminal"]

[tool.poetry.urls]
"Source Code" = "https://github.com/ThatXliner/lark_shell"
"Bug Tracker" = "https://github.com/ThatXliner/lark_shell/issues"
"Say Thanks! "= "https://saythanks.io/to/bryan.hu.2020@gmail.com"

[tool.poetry.scripts]
lark_shell = "lark_shell:main"

[tool.poetry.dependencies]
python = "^3.6"
urwid = "^2.1.2"
lark-parser = ">=0.8.0,<1.0.0"  # Not sure if "^0.8.0" would work

[tool.poetry.dev-dependencies]
# We don't have a pytest test suite yet
flake8 = "^3.8.4"
pylint = "^2.6.0"
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 90
